<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="194dp"
            android:layout_height="177dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/avatarIV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="141dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="142dp" android:layout_marginTop="30dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/userAvatar"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTV"
            android:layout_marginStart="68dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTV"
            android:layout_marginStart="68dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/companyTV" android:layout_marginStart="68dp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/nameInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/avatarIV"/>
    <TextView
            android:text="@string/companyInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/emailInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/websiteInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/websiteTV" android:layout_marginStart="46dp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="@string/birthdateInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/birthdateTV" android:layout_marginStart="14dp"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"/>
    <TextView
            android:text="@string/workInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/homeInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/mobileInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp"/>
    <TextView
            android:text="@string/streetInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/cityInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/stateInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/countryInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/zipInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/longitudeInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/latitudeInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneWorkTV" android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneHomeTV"
            android:layout_marginStart="69dp"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneMobileTV"
            app:layout_constraintBottom_toBottomOf="@+id/textView11" android:layout_marginStart="69dp"
            app:layout_constraintStart_toEndOf="@+id/textView11"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/streetTV" android:layout_marginStart="64dp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cityTV" android:layout_marginStart="72dp"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stateTV" android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/countryTV" android:layout_marginStart="75dp"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zipTV" android:layout_marginStart="81dp"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/latitudeTV" android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintBottom_toBottomOf="@+id/textView17"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/longitudeTV" android:layout_marginStart="31dp"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintBottom_toBottomOf="@+id/textView18"/>
</android.support.constraint.ConstraintLayout>