<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:padding="8dp"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/userAvatar"
            android:layout_weight="1" android:contentDescription="@string/userAvatar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nameTV"
            android:text="@string/firstnameExample"
            app:layout_constraintStart_toEndOf="@+id/userAvatar" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/userAvatar"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/companyTV" app:layout_constraintStart_toEndOf="@+id/userAvatar"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameTV"/>
    <TextView
            android:text="@string/emailExample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/emailTV"
            app:layout_constraintStart_toEndOf="@+id/userAvatar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/companyTV"/>
    <TextView
            android:text="@string/dummytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/websiteTV" app:layout_constraintStart_toEndOf="@+id/userAvatar"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailTV"/>
</android.support.constraint.ConstraintLayout>